more explicit filtering

--- a/.github/workflows/linux-wheels.yml
+++ b/.github/workflows/linux-wheels.yml
@@ -42,10 +42,11 @@ jobs:
         uses: pypa/cibuildwheel@v2.23.2
         env:
           SETUP_VERBOSE: 3
-          CIBW_SKIP: pp* cp33* cp34* cp35* cp36* cp37* cp38* 
+          CIBW_BUILD: cp314* cp313* cp312* cp311* cp310* cp39*
+          CIBW_SKIP: pp* cp36* cp37* cp38* 
           CIBW_ARCHS_LINUX: ${{ matrix.os == 'ubuntu-latest' && 'auto64 ppc64le s390x' || 'armv7l aarch64' }}
           CIBW_BEFORE_ALL: "./.github/workflows/add-cairo"
-          CIBW_ENABLE: cpython-prerelease
+          CIBW_ENABLE: "cpython-prerelease"
 
       - uses: actions/upload-artifact@v4
         with:
