--- a/.github/workflows/linux-wheels.yml
+++ b/.github/workflows/linux-wheels.yml
@@ -18,7 +18,6 @@ jobs:
       CIBW_TEST_SKIP: "*"
       CIBW_TEST_COMMAND: ""
       CIBW_BUILD_VERBOSITY: 3
-      CIBW_ENABLE: "cpython-prerelease"
       RL_CACHE_DIR: "/tmp/${{github.event.repository.name}}"
     strategy:
       fail-fast: true
@@ -40,7 +39,7 @@ jobs:
           python-version: '3.13'
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.23.2
+        uses: pypa/cibuildwheel@v3.0.0b2
         env:
           SETUP_VERBOSE: 3
           #CIBW_BUILD: cp314* cp313* cp312* cp311* cp310* cp39*
